# VFD-Controller-2nd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.defaults
_Specification/: 要件定義.txt  設計.dio  設計.md
src/: Config.h  DisplayManager.cpp  DisplayManager.h  EepromManager.cpp  EepromManager.h  EepromRawAccessor.cpp  EepromRawAccessor.h  EnvironmentSensor.cpp  EnvironmentSensor.h  I2CBusManager.cpp  I2CBusManager.h  IrRemoteManager.cpp  IrRemoteManager.h  JsonCommandProcessor.cpp  JsonCommandProcessor.h  LedColor.h  LedController.cpp  LedController.h  LedManager.cpp  LedManager.h  LogManager.cpp  LogManager.h  LogStorage.cpp  LogStorage.h  ParameterManager.cpp  ParameterStorage.cpp  ParameterStorage.h  RTCManager.cpp  RTCManager.h  SerialCommandProcessor.cpp  SerialCommandProcessor.h  SerialCommandProcessorRealDevice.cpp  SerialCommandProcessorRealDevice.h  SystemEvent.h  SystemManager.cpp  SystemManager.h  TerminalInputManager.cpp  TerminalInputManager.h  TimeManager.cpp  TimeManager.h  (+12 more)
test/: CMakeLists.txt  test_SerialCommandProcessor.cpp  test_eeprom_manager.cpp  test_parameter_manager.cpp  test_system_controller.cpp
test/mock/: DummyEepromManager.h  DummyI2CBusManager.h  DummyLogManager.h  DummyLogManager.h_  DummySystemManager.h  DummyTerminalInputManager.h  DummyTimeManager.h  EEPROM.cpp  EEPROM.h  EepromRawAccessor.cpp  I2CBusManager.cpp  I2CBusManager.h  MockLogManager.h_  MockSerialMonitorIO.h  MockWiFiManager.h  Wire.h  mock_eeprom_manager.h_
webpack/src/model/: vfdControllerDomain.js
webpack/src/view/: dispconf.riot
webpack/src/viewmodel/: vmapp.js
